slowly being destroying by anything to do with trying to understand GDs and text rendering

--- a/meds-slides-styles.scss
+++ b/meds-slides-styles.scss
@@ -20,7 +20,7 @@ $magenta: #900C3F;
 $white: #FFFFFF;
 $off-white: #F7F7F7;
 $gray: #ADADAD;
-$medium-gray: #616469;
+$medium-gray: #90959c; //#81858b; //#616469;
 $dark-gray: #373A3E;
 $peach: #DF8073;
 
