Add more scrollytelling content

--- a/course-materials/lab/closeread-styles.scss
+++ b/course-materials/lab/closeread-styles.scss
@@ -7,6 +7,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;800&family=Roboto+Mono:wght@300;400&family=Sanchez&display=swap');
 
+.cr-section[layout="overlay-center"] .trigger,
+.overlay-center .trigger {
+  background: none !important;
+  border: none !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+}
+
+
 // fonts
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-family-serif: 'Sanchez', serif;
