Add scrollytelling resoures, update scrollytelling tutorial

--- a/closeread-styles.scss
+++ b/closeread-styles.scss
@@ -7,12 +7,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;800&family=Roboto+Mono:wght@300;400&family=Sanchez&display=swap');
 
-.cr-section[layout="overlay-center"] .trigger,
-.overlay-center .trigger {
-  background: none !important;
-  border: none !important;
-  box-shadow: none !important;
-  border-radius: 0 !important;
+//attempt to remove whitespace at the bottom of the page
+#quarto-content {
+  padding-bottom: 0 !important;
+}
+
+.cr-section:last-of-type {
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 
